--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,89 +1,106 @@
 audit_header: false
 title: Chicago Real Estate Video Blog with Kati Spaniak
-description: Our mission at The Spaniak Team is to be your best resource for Chicago real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The The Spaniak Team, your professional Chicago Real Estate Agents.
+description: >-
+  Our mission at The Spaniak Team is to be your best resource for Chicago real
+  estate advice. Whether you are a buyer, seller, or investor, our team of
+  professionals can answer any questions you might have about real estate. If
+  you are looking to buy or sell a home, you can get all the information and the
+  latest updates, tips, and tricks from The The Spaniak Team, your professional
+  Chicago Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Kati Spaniak
   title:
   license_number:
-  about_markdown: |
-    The Spaniak Team is comprised of a team of local real estate professionals committed to selling some of the most desired homes in Chicago's Premier. Selling these "right addresses" is the mission of The Spaniak Team. Let us know what you're looking for. Please take advantage of the helpful tools on this website, including our exclusive Chicago's Premier Real Estate search, but also feel free to contact us personally.
+  about_markdown: >-
+    The Spaniak Team is comprised of a team of local real estate professionals
+    committed to selling some of the most desired homes in Chicago's Premier.
+    Selling these "right addresses" is the mission of The Spaniak Team. Let us
+    know what you're looking for. Please take advantage of the helpful tools on
+    this website, including our exclusive Chicago's Premier Real Estate search,
+    but also feel free to contact us personally.
   market: Chicago
   brand: The Spaniak Team
   brokerage: Brokered by eXp Realty
-  address: '159 N. Sangamon St. #300<br>Chicago, IL 60607'
+  address:
   phone: 847-379-8813
   phone_type:
   phone2:
   phone2_type:
   email: Info@SpaniakTeam.com
-  url: https://www.SpaniakTeam.com
-
+  url: 'https://www.SpaniakTeam.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: https://www.spaniakteam.com/home-valuation/
+  first_CTA_URL: 'https://www.spaniakteam.com/home-valuation/'
   second_CTA_text: Home Search
-  second_CTA_URL: https://www.spaniakteam.com/results-gallery/?userID=all
-
+  second_CTA_URL: 'https://www.spaniakteam.com/results-gallery/?userID=all'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your Chicago Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free Home Value Report"
-    CTA_url: https://www.spaniakteam.com/home-valuation/
-
+    CTA_title: What’s Your Chicago Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free Home Value Report
+    CTA_url: 'https://www.spaniakteam.com/home-valuation/'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a Chicago Home?"
-    CTA_text2: "Search the entire MLS for your Chicago home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: https://www.spaniakteam.com/results-gallery/?userID=all
-
+    CTA_title2: Looking for a Chicago Home?
+    CTA_text2: Search the entire MLS for your Chicago home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'https://www.spaniakteam.com/results-gallery/?userID=all'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 socials:
   review_sm_icons: false
   facebook_url:
-  linkedin_url: https://www.linkedin.com/in/spaniakteam/
+  linkedin_url: 'https://www.linkedin.com/in/spaniakteam/'
   gplus_url:
-  youtube_url: https://www.youtube.com/channel/UChYYnJlrKrEZySmGzhzj7-Q
-  twitter_url: https://twitter.com/thespaniakteam
-  instagram_url: https://www.instagram.com/spaniakteam/
+  youtube_url: 'https://www.youtube.com/channel/UChYYnJlrKrEZySmGzhzj7-Q'
+  twitter_url: 'https://twitter.com/thespaniakteam'
+  instagram_url: 'https://www.instagram.com/spaniakteam/'
   pinterest_url:
   zillow_url:
   trulia_url:
   yelp_url:
   podcast_url:
-
 podcast:
-  title: 'Chicago Real Estate Podcast with Kati Spaniak'
-  categories: Education
+  title: Chicago Real Estate Podcast with Kati Spaniak
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Chicago Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Spaniak Team - your professional Chicago Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Chicago, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Kati Spaniak'
-
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the Chicago
+    Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from The Spaniak Team - your professional
+    Chicago Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in Chicago, home
+    selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
+  author: Kati Spaniak
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
   hero_text: Chicago Real Estate Video Blog
-  hero_background_hex: '#999'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
@@ -92,22 +109,19 @@ site_colors:
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 navbar_colors:
   border_bottom:
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
   shadow_color: '#ffffff'
-
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
   button_padding_height_number: 15
   button_border_color: '#ffffff'
-  button_background_color: transparent
+  button_background_color: 'rgba(0, 0, 0, 0)'
   button_text_color: '#123456'
   secondary_button_border_color: '#ffffff'
   secondary_button_background_color: 'rgba(0, 0, 0, 0)'
