Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: Chicago Real Estate Video Blog with Kati Spaniak
+title: Chicago Real Estate Blog - eXp Realty
 description: >-
   Our mission at The Spaniak Team is to be your best resource for Chicago real
   estate advice. Whether you are a buyer, seller, or investor, our team of
@@ -99,7 +99,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: Chicago Real Estate Video Blog
+  hero_text: Chicago Real Estate Blog - eXp Realty
   hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
