--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -37,7 +37,7 @@ CTAs:
   first_CTA_URL: 'https://www.spaniakteam.com/home-valuation/'
   second_CTA_text: Home Search
   second_CTA_URL: 'https://www.spaniakteam.com/results-gallery/?userID=all'
-  third_CTA_text: Register Now!
+  third_CTA_text: Free Seller Seminar
   third_CTA_URL: https://www.spaniakteam.com/webinar/
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
