--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,7 +25,7 @@ client:
   market: Chicago
   brand: The Spaniak Team
   brokerage: Brokered by eXp Realty
-  address: '1544 Shermer, Northbrook, IL 60062'
+  address: '1363 Shermer Rd #200, Northbrook, IL 60062'
   phone: 847-379-8813
   phone_type:
   phone2:
@@ -38,7 +38,7 @@ CTAs:
   second_CTA_text: Home Search
   second_CTA_URL: 'https://www.spaniakteam.com/results-gallery/?userID=all'
   third_CTA_text: Free Seller Seminar
-  third_CTA_URL: https://www.spaniakteam.com/webinar/
+  third_CTA_URL: 'https://www.spaniakteam.com/webinar/'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
     CTA_title: What’s Your Chicago Home Worth?
@@ -56,7 +56,10 @@ second_sidebar_CTA:
 third_sidebar_CTA:
   - CTA_image_path3: /img/cta-images/003.jpg
     CTA_title3: Free Seller Seminar
-    CTA_text3: 'New Times & New Methods for Selling Your Home: Create a game plan to get your house sold now or in the future for the most amount of money in the least amount of time.'
+    CTA_text3: >-
+      New Times & New Methods for Selling Your Home: Create a game plan to get
+      your house sold now or in the future for the most amount of money in the
+      least amount of time.
     CTA_link_text3: Register Now!
     CTA_url3: 'https://www.spaniakteam.com/webinar/'
 lender:
