Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,7 +25,7 @@ client:
   market: Chicago
   brand: The Spaniak Team
   brokerage: Brokered by eXp Realty
-  address: '1363 Shermer Rd #200, Northbrook, IL 60062'
+  address: '1363 Shermer Rd, #200 Northbrook, IL 60062'
   phone: 847-379-8813
   phone_type:
   phone2:
